@@ -28,10 +28,14 @@
 //   in this case would be the absolute value of the negative value in 
 //   mapgrid[].
 //  
+// PROGRAM HISTORY LOG:
+//
+// 2001-10-26  Gilbert
+// 2007-08-16  Vuong     -  Added GDT 3.204  Curvilinear Orthogonal Grid
 //
 ////////////////////////////////////////////////////////////////////
 
-      #define MAXGRIDTEMP 23              // maximum number of templates
+      #define MAXGRIDTEMP 24              // maximum number of templates
       #define MAXGRIDMAPLEN 200           // maximum template map length
 
       struct gridtemplate
@@ -83,6 +87,8 @@
          {110, 16, 0, {1,1,4,1,4,1,4,4,4,-4,4,1,4,4,1,1} },
              // 3.120: Azimuth-range projection
          {120, 7, 1, {4,4,-4,4,4,4,1} },
+             // 3.204: Curvilinear Orthogonal Grid
+         {204, 19, 0, {1,1,4,1,4,1,4,4,4,4,4,-4,4,1,-4,4,4,4,1} },
              // 3.1000: Cross Section Grid
          {1000, 20, 1, {1,1,4,1,4,1,4,4,4,4,-4,4,1,4,4,1,2,1,1,2} },
              // 3.1100: Hovmoller Diagram Grid
